[gd_scene load_steps=3 format=2]

[ext_resource path="res://Shared/theme/menu.tres" type="StyleBox" id=1]
[ext_resource path="res://MainScreenButtons.gd" type="Script" id=2]

[node name="MainScreenButtons" type="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -203.0
margin_bottom = 146.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_top = 10.0
margin_right = -13.0
margin_bottom = 79.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = 10
custom_constants/margin_top = 18
custom_constants/margin_left = 10
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 18.0
margin_right = 177.0
margin_bottom = 189.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_styles/panel = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 157.0
margin_bottom = 161.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrewSheetButton" type="Button" parent="MarginContainer/Panel/VBoxContainer"]
margin_right = 147.0
margin_bottom = 27.0
text = "Crew"

[node name="RosterButton" type="Button" parent="MarginContainer/Panel/VBoxContainer"]
margin_top = 31.0
margin_right = 147.0
margin_bottom = 58.0
text = "Roster"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClocksButton" type="Button" parent="MarginContainer/Panel/VBoxContainer"]
margin_top = 62.0
margin_right = 147.0
margin_bottom = 89.0
text = "Clocks"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterButton" type="Button" parent="MarginContainer/Panel/VBoxContainer"]
margin_top = 93.0
margin_right = 147.0
margin_bottom = 120.0
text = "Character"

[node name="Hide" type="Button" parent="MarginContainer/Panel/VBoxContainer"]
margin_top = 124.0
margin_right = 147.0
margin_bottom = 151.0
toggle_mode = true
action_mode = 0
text = "Hide"

[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/CrewSheetButton" to="." method="_on_CrewSheetButton_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/RosterButton" to="." method="_on_RosterButton_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/ClocksButton" to="." method="_on_ClocksButton_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/CharacterButton" to="." method="_on_CharacterButton_pressed"]
[connection signal="toggled" from="MarginContainer/Panel/VBoxContainer/Hide" to="." method="_on_Hide_toggled"]
